--- a/portfolio/package.json
+++ b/portfolio/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tabler/icons-react": "^3.17.0",
     "framer-motion": "^11.3.31",
     "lenis": "^1.1.13",
     "react": "^18.3.1",
