FEAT: Altered layout and horizontal scroll for improved UX design

--- a/portfolio/package.json
+++ b/portfolio/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@coreui/icons": "^3.0.1",
+    "@coreui/icons-react": "^2.3.0",
     "@tabler/icons-react": "^3.17.0",
     "framer-motion": "^11.3.31",
     "lenis": "^1.1.13",
