--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,4 +23,8 @@ jobs:
 
       - name: Deploy services
         run: |
-          ssh -i ec2-key.pem -o StrictHostKeyChecking=no ec2-user@${{ secrets.EC2_IP }} "cd /home/ec2-user/PORTFOLIO-REACT && docker-compose pull && docker-compose up -d"
+          ssh -i ec2-key.pem -o StrictHostKeyChecking=no ec2-user@${{ secrets.EC2_IP }} "
+          cd /home/ec2-user/PORTFOLIO-REACT &&
+          docker-compose down &&
+          docker-compose pull &&
+          && docker-compose up -d"
