--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -27,4 +27,4 @@ jobs:
           cd /home/ec2-user/PORTFOLIO-REACT &&
           docker-compose down &&
           docker-compose pull &&
-          && docker-compose up -d"
+          docker-compose up -d"
